# scytale

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
benches/: bench.rs  cipher.rs  sha2.rs
resources/acvp/: README.md
resources/acvp/aes_ecb/: expectedResults.json  internalProjection.json  prompt.json  registration.json
resources/acvp/hmac_sha2_224/: expectedResults.json  internalProjection.json  prompt.json  registration.json
resources/acvp/hmac_sha2_256/: expectedResults.json  internalProjection.json  prompt.json  registration.json
resources/acvp/hmac_sha2_384/: expectedResults.json  internalProjection.json  prompt.json  registration.json
resources/acvp/hmac_sha2_512/: expectedResults.json  internalProjection.json  prompt.json  registration.json
resources/acvp/hmac_sha2_512_224/: expectedResults.json  internalProjection.json  prompt.json  registration.json
resources/acvp/hmac_sha2_512_256/: expectedResults.json  internalProjection.json  prompt.json  registration.json
resources/acvp/sha2_224/: expectedResults.json  internalProjection.json  prompt.json  registration.json
resources/acvp/sha2_256/: expectedResults.json  internalProjection.json  prompt.json  registration.json
resources/acvp/sha2_384/: expectedResults.json  registration.json
resources/acvp/sha2_512/: expectedResults.json  registration.json
resources/acvp/sha2_512_224/: expectedResults.json  registration.json
resources/acvp/sha2_512_256/: expectedResults.json  registration.json
src/: array.rs  buffer.rs  cipher.rs  convert.rs  error.rs  lib.rs  main.rs
src/cipher/: aes.rs  key.rs  mod.rs
src/cipher/aes/: fast.rs  mod.rs  sbox.rs  soft.rs  test.rs  vectors.rs  x86.rs
src/hash/: mod.rs
src/hash/sha2/: mod.rs  test.rs
src/mac/: mod.rs
src/mac/hmac/: mod.rs  test.rs
src/test/: mod.rs
src/test/acvp/: block.rs  mod.rs
src/util/: block.rs
