[package]
name = "scytale"
version = "0.1.0"
authors = ["Michael Paddon"]
edition = "2021"
description = "A fast and correct cryptographic library"
repository = "https://github.com/MichaelPaddon/scytale"
license = "BSD-2-Clause-Patent"
keywords = ["cryptography"]
categories = ["cryptography"]
exclude = ["/resources"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
derive_more = "0.99.17"
hex = "0.4.3"
num-traits = "0.2.18"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde = "1.0.198"
serde_json = "1.0.116"
serde_json_path = "0.6.7"

[[bench]]
name = "sha2"
harness = false
