[package]
name = "scytale"
version = "0.2.0"
authors = ["Michael Paddon"]
edition = "2021"
description = "A fast and correct cryptographic library"
repository = "https://github.com/MichaelPaddon/scytale"
license = "BSD-2-Clause-Patent"
keywords = ["cryptography"]
categories = ["cryptography"]
exclude = ["/resources"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
delegate = "0.12.0"
derive_more = "0.99.17"
generic-array = "1.0.0"
hex = "0.4.3"
hybrid-array = "0.2.0-rc.9"
num-traits = "0.2.18"
paste = "1.0.15"
patharg = "0.4.0"
seq = "0.5.0"
seq-macro = "0.3.5"
smallvec = { version = "1.13.2", features = ["const_new"] }
typenum = { version = "1.17.0", features = ["const-generics"] }
#zeroize = { versions = "1.8.1", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde = "1.0.198"
serde_json = "1.0.116"
serde_json_path = "0.6.7"

[[bench]]
name = "sha2"
harness = false
